# majsoul-recognizer

./: .gitignore  Dockerfile.train  pyproject.toml
config/: dataset.yaml  train_config.yaml  zones.yaml
docs/specs/: 2026-05-02-architecture-design.md  2026-05-02-feasibility-review.md  2026-05-02-model-training-spec.md  2026-05-02-product-spec.md
docs/superpowers/plans/: 2026-05-06-foundation.md  2026-05-06-recognition-engine.md  2026-05-07-integration.md  2026-05-09-gui-spec-a-foundation.md  2026-05-09-gui-spec-b-widgets.md  2026-05-09-gui-spec-c-application.md  2026-05-11-gui-visual-redesign.md  2026-05-13-vit-classifier-integration.md
docs/superpowers/specs/: 2026-05-06-integration-design.md  2026-05-06-recognition-engine-design.md  2026-05-08-gui-design.md  2026-05-08-gui-implementation-plan.md  2026-05-09-gui-spec-a-foundation.md  2026-05-09-gui-spec-b-widgets.md  2026-05-09-gui-spec-c-application.md  2026-05-11-gui-redesign-phase1-colors.md  2026-05-11-gui-redesign-phase2-framework.md  2026-05-11-gui-redesign-phase3-widgets.md  (+8 more)
src/majsoul_recognizer/: __init__.py  __main__.py  calibrate.py  cli.py  pipeline.py  tile.py  types.py
tests/: conftest.py  test_calibrate.py  test_cli.py  test_finder.py  test_frame.py  test_integration.py  test_pipeline.py  test_screenshot.py  test_tile.py  test_training_pipeline.py  test_types.py  test_zones.py
tests/gui/: conftest.py  test_app.py  test_app_state.py  test_base_view.py  test_dev_view.py  test_fps_counter.py  test_live_view.py  test_screenshot_view.py  test_settings.py  test_theme.py  test_worker.py
tests/recognition/: conftest.py  test_config.py  test_engine.py  test_pattern_matcher.py  test_state_builder.py  test_text_recognizer.py  test_tile_classifier.py  test_tile_detector.py  test_validator.py
tools/: annotate.py  compare_accuracy.py  compare_screenshots.py  export_onnx.py  live_recognize.py  prepare_real_data.py  synthesize.py  test_majsoulbot_model.py  train.py  train_all.sh
(+48 files in other folders)
