[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "majsoul-recognizer"
version = "0.1.0"
description = "雀魂麻将画面识别助手"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "mss>=9.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.scripts]
majsoul-recognizer = "majsoul_recognizer.cli:main"

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
]
windows = [
    "pywin32>=306",
]
recognition-ocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.5",
]
recognition-detector = [
    "onnxruntime>=1.16",
]
training = [
    "ultralytics>=8.1",
]
gui = [
    "Pillow>=10.0",
]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "onnx>=1.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
majsoul_recognizer = ["ocr_dicts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
